@@ -246,17 +246,11 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/pygame_display.html#toggle_fullscreen>pygame.display.toggle_fullscreen</a> - switch the display fullscreen mode<br>
 <a href=ref/pygame_display.html#update>pygame.display.update</a> - update an area of the display<br>
 <a href=ref/pygame_draw.html#circle>pygame.draw.circle</a> - draw a circle on a surface<br>
-<a href=ref/pygame_draw.html#circle>pygame.draw.circle</a> - draw a circle on a surface<br>
-<a href=ref/pygame_draw.html#ellipse>pygame.draw.ellipse</a> - draw an ellipse on a surface<br>
 <a href=ref/pygame_draw.html#ellipse>pygame.draw.ellipse</a> - draw an ellipse on a surface<br>
 <a href=ref/pygame_draw.html#line>pygame.draw.line</a> - draw a line on a surface<br>
-<a href=ref/pygame_draw.html#line>pygame.draw.line</a> - draw a line on a surface<br>
 <a href=ref/pygame_draw.html#lines>pygame.draw.lines</a> - draw multiple connected lines on a surface<br>
-<a href=ref/pygame_draw.html#lines>pygame.draw.lines</a> - draw multiple connected lines on a surface<br>
-<a href=ref/pygame_draw.html#polygon>pygame.draw.polygon</a> - draws a polygon on a surface<br>
 <a href=ref/pygame_draw.html#polygon>pygame.draw.polygon</a> - draws a polygon on a surface<br>
 <a href=ref/pygame_draw.html#rect>pygame.draw.rect</a> - draws a polygon on a surface<br>
-<a href=ref/pygame_draw.html#rect>pygame.draw.rect</a> - draws a rectangle on a surface<br>
 <a href=ref/pygame_event.html#Event>pygame.event.Event</a> - create new event object<br>
 <a href=ref/pygame_event.html#event_name>pygame.event.event_name</a> - name for event type<br>
 <a href=ref/pygame_event.html#get>pygame.event.get</a> - get all of an event type from the queue<br>
@@ -336,7 +330,7 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/pygame_surfarray.html#pixels3d>pygame.surfarray.pixels3d</a> - get a 3d reference array to a surface<br>
 <a href=ref/pygame_surfarray.html#pixels_alpha>pygame.surfarray.pixels_alpha</a> - get a reference array to a surface alpha data<br>
 <a href=ref/pygame_time.html#delay>pygame.time.delay</a> - delay for a number of milliseconds<br>
-<a href=ref/pygame_time.html#get_ticks>pygame.time.get_ticks</a> - milliseconds since startup<br>
+<a href=ref/pygame_time.html#get_ticks>pygame.time.get_ticks</a> - milliseconds since initialization<br>
 <a href=ref/pygame_time.html#set_timer>pygame.time.set_timer</a> - control timer events<br>
 <a href=ref/pygame_transform.html#flip>pygame.transform.flip</a> - flips a surface on either axis<br>
 <a href=ref/pygame_transform.html#rotate>pygame.transform.rotate</a> - rotate a Surface<br>
